Fix to announcements overflow

--- a/LiveHack/Content/Less/UiElements/Announcements.less
+++ b/LiveHack/Content/Less/UiElements/Announcements.less
@@ -15,6 +15,7 @@ ul.announcements {
     display: block;
     width: 100%;
     flex-grow: 1;
+    box-sizing: border-box;
 
 
     list-style-type: none;
